--- a/RockPet/Base.lproj/Main.storyboard
+++ b/RockPet/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2GT-KI-1Yl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,8 +17,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RockPet" translatesAutoresizingMaskIntoConstraints="NO" id="eFM-Ez-WfP">
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RockPet" translatesAutoresizingMaskIntoConstraints="NO" id="eFM-Ez-WfP">
                                 <rect key="frame" x="280" y="280" width="40" height="40"/>
+                                <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="6eN-qF-U4o"/>
                                     <constraint firstAttribute="width" constant="40" id="7Fc-e6-Oti"/>
@@ -38,25 +40,42 @@
                                         <exclude reference="yEo-ne-Hjp"/>
                                     </mask>
                                 </variation>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="Umh-bm-GCg" appends="YES" id="IHF-GF-20f"/>
+                                </connections>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="rock" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lXh-ue-WxY">
+                                <rect key="frame" x="16" y="559" width="568" height="21"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
+                                <color key="textColor" red="0.79607843137254897" green="0.48627450980392156" blue="0.49803921568627452" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.60174239309210531" green="0.90892269736842102" blue="0.75218441611842102" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="tintColor" red="0.60174239309999999" green="0.90892269739999998" blue="0.75218441609999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerY" secondItem="eFM-Ez-WfP" secondAttribute="centerY" id="6WQ-pU-BTJ"/>
+                            <constraint firstItem="lXh-ue-WxY" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="NRb-Px-a2m"/>
                             <constraint firstAttribute="centerX" secondItem="eFM-Ez-WfP" secondAttribute="centerX" id="Tah-Nj-1XI"/>
+                            <constraint firstItem="lXh-ue-WxY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="h76-KU-iGU"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lXh-ue-WxY" secondAttribute="bottom" constant="20" id="oaT-eu-Etx"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="JLa-MF-kYe"/>
                     <connections>
+                        <outlet property="ageDisplay" destination="lXh-ue-WxY" id="Dcs-Bv-T2E"/>
                         <outlet property="rock" destination="eFM-Ez-WfP" id="Ehe-v6-fks"/>
                         <outlet property="rockHeight" destination="6eN-qF-U4o" id="5bt-f2-0Fv"/>
                         <outlet property="rockWidth" destination="I4T-gd-YBE" id="NZy-dG-wbY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="Umh-bm-GCg" userLabel="rock Tap Gesture Recognizer">
+                    <connections>
+                        <action selector="handleRockTouch:" destination="BYZ-38-t0r" id="Yum-kd-VAN"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1181" y="1048"/>
+            <point key="canvasLocation" x="1095" y="1048"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="tqJ-NZ-s27">
@@ -68,13 +87,10 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="iMa-nd-K5Q"/>
-                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mr7-2q-OqI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="440" y="1048"/>
+            <point key="canvasLocation" x="416" y="1687"/>
         </scene>
     </scenes>
     <resources>
